@@ -88,7 +88,7 @@ class StickiesController < ApplicationController
     @search_terms.each{|search_term| sticky_scope = sticky_scope.search(search_term) }
 
     sticky_scope = sticky_scope.with_tag(params[:tag_ids].split(',')) unless params[:tag_ids].blank?
-    sticky_scope = sticky_scope.with_board(params[:board_id]) unless params[:board_id].blank?
+    sticky_scope = sticky_scope.with_board(params[:board_id]) unless params[:board_id].blank? or params[:board_id] == 'all'
 
     @order = ''
 
