@@ -1,14 +1,14 @@
 <% if archived %>
   <li class="nav-header" id="archived_boards" data-board-id="<%= @project.boards.where(archived: true).natural_sort.first[1] if @project.boards.where(archived: true).size > 0 %>"
     data-object="toggle-archived-boards"
-    data-message="<%= pluralize(@project.boards.where(archived: true).size, 'Archived Board') %>"
+    data-message="<%= @project.boards.where(archived: true).size %> Archived"
     data-visible="<%= boards_visible.to_s %>"
     style="cursor:pointer"
-    ><%= (boards_visible ? 'Hide' : 'Show') + ' ' + pluralize(@project.boards.where(archived: true).size, 'Archived Board') %></li>
+    ><%= (boards_visible ? 'Hide' : 'Show') + " #{@project.boards.where(archived: true).size} Archived" %></li>
 <% else %>
   <li class="nav-header" style="cursor:pointer" data-object="create-board" data-url="<%= new_board_path(board: { project_id: @project.id }) %>">Boards</li>
   <%#= link_to 'Create Board', new_board_path(board: { project_id: @project.id }), class: 'btn btn-mini btn-block' %>
-  <li class="<%= 'active' if params[:board_id] == '0' %>" id="unarchived_boards"><%= link_to 'Holding Pen', show_redesign_project_path(@project, board_id: 0), data: { object: 'board-select board-droppable', board_id: 0, board_name: 'Holding Pen', past_incomplete: @project.incomplete_count(nil, 'past_due'), my_past_incomplete: @project.incomplete_count(nil, 'past_due', current_user), future_incomplete: @project.incomplete_count(nil, 'upcoming'), my_future_incomplete: @project.incomplete_count(nil, 'upcoming', current_user) } %></li>
+  <li class="<%= 'active' if params[:board_id] == '0' %>" id="unarchived_boards"><%= link_to 'Holding Pen', show_redesign_project_path(@project, board_id: 0), data: { object: 'board-select board-droppable', board_id: 0, board_name: 'Holding Pen', project_id: @project.id, past_incomplete: @project.incomplete_count(nil, 'past_due'), my_past_incomplete: @project.incomplete_count(nil, 'past_due', current_user), future_incomplete: @project.incomplete_count(nil, 'upcoming'), my_future_incomplete: @project.incomplete_count(nil, 'upcoming', current_user) } %></li>
 <% end %>
 
 <% @project.boards.where(archived: archived).natural_sort.each do |board_name, board_id| %>
