@@ -6,7 +6,16 @@
 
 
 <div class="pull-left" style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; padding: 2px 5px;">
-  <div style="font-weight:200;font-size:20px;float:left;margin-right:5px"><%= @board ? @board.name : (params[:board_id] == '0' ? 'Holding Pen' : 'All Stickies') %></div> <% @tags.each do |tag| %><%= @tag = tag; render partial: 'tags/show' %><% end %>
+  <%= check_box_tag "check-all", '1', false, data: { object: 'check-all-stickies' }, style: 'float:left;margin-left:-20px' %>
+
+  <div style="float:left;margin-right:5px;white-space:nowrap">
+    <span style="font-weight:200;font-size:20px;"><%= @board ? @board.name : (params[:board_id] == '0' ? 'Holding Pen' : 'All Stickies') %></span>
+    <%= link_to 'Mark Completed', '#', class: 'btn btn-mini', data: { object: 'count-stickies' } %>
+    <% @tags.each do |tag| %><%= @tag = tag; render partial: 'tags/show' %><% end %>
+  </div>
+
+
+
 </div>
 <div class="btn-toolbar pull-right">
   <div class="btn-group">
@@ -33,7 +42,7 @@
   <table class="table table-condensed" style="width:100%;table-layout: fixed;"><col width="20px"/><col /><col width="80px"/><col width="170px"/>
     <% @stickies.each do |sticky| %>
       <tr class="<%= sticky.completed? ? 'sticky-completed' : 'sticky-not-completed' %>" id="sticky_<%= sticky.id %>_row">
-        <td><%= check_box_tag 'sticky_ids[]', sticky.id, false, style: 'margin:0px' %></td>
+        <td><%= check_box_tag "sticky_ids[#{sticky.id}]", '1', false, style: 'margin:0px', data: { object: 'sticky-checkbox', sticky_id: sticky.id } %></td>
         <td data-link="<%= sticky_path(sticky) %>" style="cursor:pointer;white-space:nowrap;overflow-x:hidden;">
           <div id="sticky_<%= sticky.id %>" data-object="sticky-draggable" data-sticky-id="<%= sticky.id %>" data-board-id="<%= sticky.board ? sticky.board.id : 0 %>">
             <span><% sticky.tags.each do |tag| %><%= @tag = tag; render partial: 'tags/show' %><% end %></span> <%= strip_tags(sticky.full_description) %>
